--- a/src/Assignment-2/assignment2.css
+++ b/src/Assignment-2/assignment2.css
@@ -5,3 +5,112 @@
 width: 100%;
 height: 100%;
 }
+
+.header
+{
+    
+    background-color:aqua;
+    display: flex;
+   
+    
+}
+.search
+{
+   position:relative;
+   left:73%;
+   top:60px;
+}
+.logo{
+    display:flex;
+    justify-content: flex-start;
+    
+    padding: 3px;
+    width:12%;
+
+}
+.nav-content{
+    background-color:aliceblue;
+    width: 100%;
+    /* position:relative;
+    
+    right:30%;
+    top:120px; */
+    
+
+}
+/* .nav
+{
+    position:relative;
+    right:30%;
+    top:120px;
+} */
+.nav ul{
+    height: 50px;
+    width: 1349px;
+}
+.nav ul li{
+    float: left;
+    display: flex;
+    justify-content: center;
+    width:24.5%;
+    text-align: center;
+}
+.nav li a{
+    text-align: center;
+    padding: 16px;
+    display: flex;
+    justify-content: center;
+}
+.middle-wrapper
+{
+    display: flex;
+    justify-content: space-between;
+    width:100%;
+    height:70%;
+}
+.lside
+{
+    display: flex;
+    width:10%;
+    height: 90%;
+    background-color: burlywood;
+
+}
+.lside ul li{
+    height:40px;
+    
+    
+}
+.sect
+{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 75%;
+}
+.post-img{
+    width:30%;
+    margin:1%;
+}   
+.rside
+{
+    display: flex;
+    justify-content:center;
+    
+    background-color: blanchedalmond;
+    width:10%;
+}
+.rside ul li{
+    height:40px;
+    width: 20%;
+}
+
+}
+#main-content-section{
+    display: flex;
+    justify-content: space-around;
+    /* flex-wrap:wrap; */
+}
+.foot{
+    background-color: blueviolet;
+}
