--- a/src/Assignment-3/assignment3.css
+++ b/src/Assignment-3/assignment3.css
@@ -5,3 +5,66 @@
 width: 100%;
 height: 100%;
 }
+.top-wrapper{
+    
+    /* justify-content: space-evenly; */
+    background-color:#f2f2f2;
+    height: 50%;
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
+}
+.top-left{
+    width: 47%;
+    height: 469px;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
+    display:inline-block;
+    text-align: center;
+    /* margin-top:10%; */
+}
+.top-right{
+    /* display:inline-block;  */
+    width:47%;
+    height: 469px;
+    float:right;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;    
+
+    /* position: relative;
+    /* right:2%; */
+    /* left:50%;
+    top:1px; */ 
+}
+iframe{
+    width:100%;
+    height: 100%;
+}
+
+.bottom-wrapper{
+    
+    /* justify-content: space-evenly; */
+    background-color:#f2f2f2;
+
+    height: 50%px;
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
+}
+.bottom-top{
+    text-align: center;
+    width: 100%;
+    height: 234.5px;
+}
+.bottom-down{
+    width: 100%;
+    height: 50%;
+    height: 234.5px;
+}
+h1{
+    text-align: center;
+}
