--- a/src/Assignment-2/assignment2.css
+++ b/src/Assignment-2/assignment2.css
@@ -46,7 +46,7 @@ height: 100%;
 } */
 .nav ul{
     height: 50px;
-    width: 1349px;
+    width: 100%;
 }
 .nav ul li{
     float: left;
@@ -66,7 +66,7 @@ height: 100%;
     display: flex;
     justify-content: space-between;
     width:100%;
-    height:70%;
+    /* height:70%; */
 }
 .lside
 {
@@ -101,7 +101,7 @@ height: 100%;
 .rside
 {
     display: flex;
-    justify-content:center;
+    justify-content:flex-start;
     
     background-color: blanchedalmond;
     width:10%;
