--- a/src/Assignment-3/assignment3.css
+++ b/src/Assignment-3/assignment3.css
@@ -5,6 +5,7 @@
 width: 100%;
 height: 100%;
 }
+
 .top-wrapper{
     
     /* justify-content: space-evenly; */
@@ -24,7 +25,12 @@ height: 100%;
     display:inline-block;
     text-align: center;
     /* margin-top:10%; */
+    box-shadow :0px 0px 20px 6px;
+    background-color:lightcoral; 
 }
+
+
+
 .top-right{
     /* display:inline-block;  */
     width:47%;
@@ -32,7 +38,9 @@ height: 100%;
     float:right;
     margin: 0px;
     padding: 0px;
-    border: 0px;    
+    border: 0px; 
+    box-shadow :0px 0px 20px 6px; 
+    background-color:lightcoral; 
 
     /* position: relative;
     /* right:2%; */
@@ -59,12 +67,17 @@ iframe{
     text-align: center;
     width: 100%;
     height: 234.5px;
+     box-shadow :0px 0px 20px 6px; 
+     background-color:lightcoral; 
 }
 .bottom-down{
     width: 100%;
     height: 50%;
     height: 234.5px;
+   box-shadow :0px 0px 20px 6px;
+   background-color:lightcoral;
 }
 h1{
     text-align: center;
-}
+    padding-top: 50px;
+} 
