--- a/src/Assignment-4/assignment4.css
+++ b/src/Assignment-4/assignment4.css
@@ -5,3 +5,171 @@
 width: 100%;
 height: 100%;
 }
+body {
+    font-family: 'Raleway', sans-serif;
+  }
+header 
+{
+    background: #92E0E5;
+    color: white;
+    height: 50px;
+    padding: 0 25px;
+    border-bottom:1px solid teal;
+}
+header nav 
+{
+    float: right;
+}
+header h1 {
+    float: left;
+    text-indent: -9999px;
+    background: url('logo.jpg') no-repeat;
+    height: 35px;
+    width: 35px;
+    margin-top: 8px;
+  }
+  
+/* .headerReplacement{
+    
+    text-indent: -9999px;
+    background: url('C:/Users/dnyan/Desktop/logo.png') no-repeat;
+    height: 50px;
+    width: 50px;
+    margin-top: 8px;
+  } */
+  nav li {
+    display: inline-block;
+    padding: 0px 10px;
+    color: white;
+    
+  }
+ 
+   
+  nav li:hover {
+    background: #3F8DA7;
+    color: white;
+    cursor: pointer;
+  }
+  #hero
+  {
+    background: url("images/Background.jpg");
+    background-size: cover;
+    text-align: center;
+    padding: 50px 0;
+    margin-bottom: 50px;
+    height: 450px;
+
+  }
+  #hero img {
+    display: block;    
+    margin: auto;
+    border-radius: 50%;
+    border: 5px solid #3F8DA7;
+    margin-bottom: 20px;
+  
+  }
+  #hero h2 {
+    font-size: 30px;
+    margin-bottom: 25px;}
+  #hero-btn
+  {
+    margin-top: 50px;
+  }
+
+  /* #hero a {
+    
+    background: white;
+    border: 5px solid #3F8DA7;
+    color: #3F8DA7;
+    padding: 5px 10px;
+    text-decoration: none;
+    
+  } */
+   
+/* #hero a:hover {
+    margin: 10px;
+    padding: 5px 10px;
+    background: #3F8DA7;
+    color: white;
+  } */
+.three-col
+  {
+    width:30%;
+    display: inline-block;
+    text-align: center;
+    vertical-align: top;
+    margin: 0 10px;
+  }
+.three-col img {
+    border-radius: 50%;
+    border: 3px solid #3F8DA7;
+    height: 200px;
+    width: 200px;
+    margin: 25px 0;
+    }
+/* a {
+  background: white;
+  border: 5px solid #3F8DA7;
+  color: #3F8DA7;
+  padding: 5px 10px;
+  text-decoration: none;
+  }
+a:hover {
+  padding: 5px 10px;
+  background: #3F8DA7;
+  color: white;
+  } */
+.three-col p {
+  margin-bottom: 40px;
+  }
+footer {
+    background: #3F8DA7;
+    color: white;
+    margin-top: 40px;
+    padding: 20px 0;
+    text-align: center;
+}
+footer ul {
+  margin: 40px 0;
+  }
+  footer li {
+  display: inline-block;
+  margin: 0 25px;
+  }
+.btn {
+background: white;
+border: 5px solid #3F8DA7;
+color: #3F8DA7;
+padding: 5px 10px;
+text-decoration: none;
+}
+.btn:hover {
+background: #3F8DA7;
+color: white;
+padding: 5px 10px;
+}
+footer ul li img{
+  width:50px;
+  height: 50px;
+}
+.link {
+  color: white
+  }
+  .link:hover {
+  color: #92E0E5;
+  }
+.header-nav
+{
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+}
+.header-nav:hover{
+  color:aquamarine;
+}
+
+
+  
+      
+  
+    
