--- a/src/Assignment-5/assignment5.css
+++ b/src/Assignment-5/assignment5.css
@@ -1,7 +1,112 @@
 /* Our CSS file. */
 
-
+/* 
 .container, .content {
-width: 100%;
-height: 100%;
+width: 80%;
+
+
+} */
+body
+{
+    height: 100vh;
+    
+    width:100%;
 }
+.wrapper
+{
+    height: 100%;
+    width:70%;
+    /* height: 800px; */
+    align-self: center;
+    background-color: lightgray;
+    margin: auto;
+    /* box-shadow: 10px 10px; */
+}
+* {
+    box-sizing: border-box;
+  }
+.card
+{
+    display: flex;
+    padding: 30px 40px 10px 40px;
+    height: 50%;
+    /* width: 80%; */
+    /* /box-shadow: 4px 4px; */
+    
+    
+}
+.image-wrapper
+{
+    background-color: lightgreen;
+    width: 28%;
+    margin: 0px;
+}
+/* .card img{
+    width: 100px;
+    height: 100px;
+} */
+.img1{
+    position: relative;
+    top:-25px;
+    left:-15px;
+    bottom:3em;
+    width:115%;
+    /* margin-left: -175px; */
+    /* width: 500px; */
+    -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, 
+    from(transparent), color-stop(80%, transparent) , to(rgba(250, 250, 250, 0.1)));
+
+    
+}
+.img2
+{
+    position: relative;
+    top: 100px;
+    left:-15px;
+    width:115%;
+    /* box-shadow: 10px 10px 5px #ccc; */
+
+}   
+
+.main-content
+{
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    padding: 3em 4em 2em;
+    /* border: 1px solid black; */
+    text-align:left;
+    width: 60%;
+    box-shadow: 1px 0px 6px 1px;
+   
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+h1{
+    font-size: 55px;
+}
+p{
+    height:86px;
+}
+
+.btn
+{
+    background-color:lightgreen;
+    color:white;
+    padding: 0 25px;
+    height: 40px;
+    font-size: 1.2em;
+    letter-spacing: 1px;    
+    line-height: 40px;    
+    /* display: inline-block; */
+    border-radius: 20px;  
+    text-decoration: none;
+    margin-top:1.5em;
+    border:1px solid gray;
+    width:200px;
+    text-align: center;
+    
+  text-transform: uppercase;
+  
+}
+
